--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -8,6 +8,6 @@
 
 <ion-content padding>
 
-  <a href="https://github.com/peterpeterparker/ionic-pwa-camera-no-plugins">GitHub</a>
+  <a href="https://github.com/peterpeterparker/ionic-pwa-camera-no-plugins">https://github.com/peterpeterparker/ionic-pwa-camera-no-plugins</a>
 
 </ion-content>
